--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,21 @@ footer p a {
   border: solid 2px black;
 
 }
+
+#create {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    width: 100px;
+    height: 50px;
+    background-color: #328fe6; /* for example */
+    color: white;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  
+}
