--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ footer p a {
     bottom: 20px;
     width: 100px;
     height: 50px;
-    background-color: #328fe6; /* for example */
+    background-color: #328fe6; 
     color: white;
     border: none;
     text-align: center;
