--- a/css/style.css
+++ b/css/style.css
@@ -326,5 +326,15 @@ footer p a {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    border-radius: 15px;
+    line-height: 3;
   
+}
+#create:hover {
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    transition: 0.3s;
+    scale: 1.1;
+    border: solid 2px black;
+    
 }
