--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,109 @@ footer p a {
     box-shadow: 0 0 5px rgba(0, 0, 0, 1);
     
 }
+
+.create-container {
+  width: 400px;
+  background: linear-gradient(#212121, #212121) padding-box,
+              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  border: 2px solid transparent;
+  padding: 32px 24px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  border-radius: 16px;
+  margin-top: 200px;
+  margin-left: 35%;
+}
+
+.create-container button:active {
+  scale: 0.95;
+}
+
+.create-container .form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.create-container .create-group {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.create-container .create-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #717171;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.create-container .create-group input {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: #fff;
+  font-family: inherit;
+  background-color: transparent;
+  border: 1px solid #414141;
+}
+
+.create-container .create-group textarea {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  resize: none;
+  color: #fff;
+  height: 96px;
+  border: 1px solid #414141;
+  background-color: transparent;
+  font-family: inherit;
+}
+
+.create-container .create-group input::placeholder {
+  opacity: 0.5;
+}
+
+.create-container .create-group input:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+.create-container .create-group textarea:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+.create-container .create-submit {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  align-self: flex-start;
+  font-family: inherit;
+  color: #717171;
+  font-weight: 600;
+  width: 40%;
+  background: #313131;
+  border: 1px solid #414141;
+  padding: 12px 16px;
+  font-size: inherit;
+  gap: 8px;
+  margin-top: 8px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.create-container .create-submit:hover {
+  background-color: #fff;
+  border-color: #fff;
+}
+
 .product-container {
   margin-top: 100px;
   display: flex;
