--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,19 @@ footer p a {
   transition: background-color 0.3s ease;
 
 }
+/*
+.kosik {
+  color: rgb(0, 0, 0);
+  border-radius: 50%;
+  padding: 10px!important;
+}
+
+.kosik:hover {
+  background-color: white;
+  color: black!important;
+  border: solid 2px black;
+  padding: 10px!important;
+} */
 
 .shopping-cart-button:hover {
   background-color: white;
