--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,36 @@ footer p a {
     
 } 
 
+#objednavky-btn {
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  width: 150px;
+  height: 50px;
+  background-color: #e68932; 
+  color: white;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 15px;
+  line-height: 3;
+  border: solid 2px black;
+
+}
+
+#objednavky-btn:hover {
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  transition: 0.3s;
+  scale: 1.1;
+  border: solid 2px black;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 1);
+}
+
 .create-container {
   width: 400px;
   background: linear-gradient(#212121, #212121) padding-box,
