--- a/css/style.css
+++ b/css/style.css
@@ -1043,15 +1043,23 @@ th {
   background-color: #000000;
   color: white;
   padding: 10px;
+
+ 
 }
 
 td {
   padding: 10px;
   background-color: #d8d8d8;
+ 
 }
 
 table {
   margin-top: 200px;
+  border: solid 1px black;
+  box-shadow:4px 8px 10px -3px rgba(0, 0, 0, 0.356) ;
+  border-collapse: collapse;
+  border-radius: 15px;
+
 }
 
 .container-login {
