--- a/css/style.css
+++ b/css/style.css
@@ -897,6 +897,7 @@ footer p a {
   justify-content: space-between;
   padding: 10px 10px 10px 20px;
   background-color: #efeff3;
+  border-radius: 10px;
 }
 
 .price {
