--- a/css/style.css
+++ b/css/style.css
@@ -1090,7 +1090,7 @@ box-shadow: #000000 0px 0px 10px;
   border: solid 2px black;
   padding: 5px;
   transition: 0.3s;
-  margin-bot: 10px;
+  margin-bottom: 10px;
 
 }
 
